# prefect-flows

./: .gitignore  README.md  cluster_provided.py  common.py  convert_geospatial_v1.py  create_apis_graph_v1.py  datadump_workflow.py  enrich_cho_data_v1.py  entity_id_linker.py  example_job_template.py  inference_workflow.py  ingest_mock_data_flow.py  ingest_workflow.py  intavia-job-template.yaml  intavia_links_from_ulan.py  intavia_links_from_wikidata.py  person_id_linker.py  printenv_flow.py  prov_common.py  pyproject.toml  shex_validation_workflow.py  test.py  test2.py  test_sparql.py  update_provided_entities.py  update_provided_persons.py  update_provided_workflow.py  upload_data_to_zenodo.py
.devcontainer/: Dockerfile  devcontainer.json
.prefect/: config.toml
conversion-flow/apis_rdf_from_json/: intavia_apis_conversion.py
conversion-flow/apis_rdf_from_json/.devcontainer/: devcontainer.json
prefect/: config.toml
shacl_validation/: shacl_validation_2023-04-19.ttl
sparql/: add_geoliterals_blazegraph_v1.sparql  convert_cho_europeana_v1.sparql  convert_cho_wikidata_step_1_v1.sparql  convert_cho_wikidata_v1.sparql  convert_cho_wikidata_v2.sparql  convert_cho_wikidata_v3.1.sparql  convert_cho_wikidata_v3.2.sparql  convert_cho_wikidata_v3.2.sparql.sparql  convert_cho_wikidata_v3.3.sparql
testdata/: functions.py  test_rdfs_ontology1.ttl
